# football-analysis

./: .gitignore  README.md
.github/: copilot-instructions.md
backend/: .env.example  pyproject.toml  run.py  test_google_cloud_key.py  test_openrouter_format.py  test_openrouter_video_support.py
backend/app/: gemini_analyzer.py  logger.py  main.py  models.py  openrouter_analyzer.py  prompts.py  utils.py  video_processor.py  video_timestamp_overlay.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalysisTable.tsx  ProgressTracker.tsx  SummaryPanel.tsx  VideoTimestampOverlay.tsx  VideoUploader.tsx
frontend/src/lib/: api.ts  types.ts
